--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -36,14 +36,9 @@ jobs:
           extra-specs: |
             python=3.10
 
-      - name: Install pypa/build
-        run: >-
-          python -m
-          pip install
-          build
-          --user
-
       - name: Build a binary wheel and a source tarball
+        env:
+          CONDA_PREFIX: /usr/share/miniconda3/envs/my-env
         run: >-
           python -m
           build
