--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,16 +6,13 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 option(BUILD_SHARED_LIBS "Build shared libraries" ON)
-if(CONDA_ROOT)
-    message(STATUS "Adding CONDA_ROOT directories: ${CONDA_ROOT}")
-    set(CMAKE_INCLUDE_PATH "${CONDA_ROOT}/include")
-    set(CMAKE_LIBRARY_PATH "${CONDA_ROOT}/lib")
-    link_directories("${CONDA_ROOT}/lib")
-    include_directories("${CONDA_ROOT}/include")
-    include_directories("${CONDA_ROOT}/include/kaldi")
-    if (NOT CUDA_TOOLKIT_ROOT_DIR)
-        set(CUDA_TOOLKIT_ROOT_DIR "${CONDA_ROOT}")
-    endif()
+if(KALDI_ROOT)
+    message(STATUS "Adding KALDI_ROOT directories: ${KALDI_ROOT}")
+    set(CMAKE_INCLUDE_PATH "${KALDI_ROOT}/include")
+    set(CMAKE_LIBRARY_PATH "${KALDI_ROOT}/lib")
+    link_directories("${KALDI_ROOT}/lib")
+    include_directories("${KALDI_ROOT}/include")
+    include_directories("${KALDI_ROOT}/include/kaldi")
 
 endif()
 add_definitions(-DKALDI_NO_PORTAUDIO=1)
@@ -110,7 +107,7 @@ target_link_libraries(_kalpy PUBLIC kaldi-cudadecoder kaldi-cudafeat
                                     )
 endif()
 target_compile_definitions(_kalpy
-                           PRIVATE VERSION_INFO="0.0.1")
+                           PRIVATE VERSION_INFO="5.5.1068")
 if(MSVC)
 set_target_properties(_kalpy PROPERTIES
     DEFINE_SYMBOL "KALDI_DLL_IMPORTS"
