Fix cmake build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,9 @@ if(KALDI_ROOT)
     link_directories("${KALDI_ROOT}/lib")
     include_directories("${KALDI_ROOT}/include")
     include_directories("${KALDI_ROOT}/include/kaldi")
+    if (NOT CUDA_TOOLKIT_ROOT_DIR)
+        set(CUDA_TOOLKIT_ROOT_DIR "${CONDA_ROOT}")
+    endif()
 
 endif()
 add_definitions(-DKALDI_NO_PORTAUDIO=1)
