--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,12 +37,13 @@ jobs:
           fetch-depth: 0
 
       - name: Install Conda environment with Micromamba
-        uses: mamba-org/provision-with-micromamba@main
+        uses: mamba-org/setup-micromamba@v1
         with:
           environment-file: environment.yml
-          environment-name: mfa
-          extra-specs: |
+          environment-name: my-env
+          create-args: >-
             python=3.10
+          cache-environment: true
 
       - name: Build kalpy
         env:
