Update conda paths

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,6 @@ jobs:
           fetch-depth: 0
 
       - name: Install Conda environment with Micromamba
-        id: mamba_setup
         uses: mamba-org/setup-micromamba@v1
         with:
           environment-file: environment.yml
@@ -48,7 +47,7 @@ jobs:
 
       - name: Build kalpy
         env:
-          KALDI_ROOT: ${{mamba_setup.outputs.environment-path}}
+          KALDI_ROOT: ~/micromamba/envs/my-env
         shell: bash -l {0}
         run: pip install .
 
