Update CMakeLists for osx

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,7 +44,11 @@ if (MSVC)
     foreach(CompilerFlag ${CompilerFlags})
       string(REPLACE "/MD" "/MT" ${CompilerFlag} "${${CompilerFlag}}")
     endforeach()
-endif (MSVC)
+ elseif(APPLE)
+     set(CMAKE_INSTALL_RPATH "@loader_path")
+ else()
+     set(CMAKE_INSTALL_RPATH "$ORIGIN;$ORIGIN/../lib;$ORIGIN/../../tools/openfst/lib")
+endif ()
 
 #find_package(CUDAToolkit)
 #find_package(CUDA)
