--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,13 +5,13 @@ repos:
     rev: 22.10.0
     hooks:
       - id: black
-  - repo: https://gitlab.com/pycqa/flake8
-    rev: 4.0.1
-    hooks:
-      - id: flake8
-        args: [--max-line-length=100]
-        additional_dependencies:
-          - flake8-bugbear == 20.1.4
+  #- repo: https://gitlab.com/pycqa/flake8
+  #  rev: 4.0.1
+  #  hooks:
+  #    - id: flake8
+  #      args: [--max-line-length=125]
+  #      additional_dependencies:
+  #        - flake8-bugbear == 20.1.4
   - repo: https://github.com/pre-commit/mirrors-isort
     rev: v5.9.3
     hooks:
@@ -36,6 +36,6 @@ repos:
       - id: debug-statements
       - id: end-of-file-fixer
       - id: trailing-whitespace
-      - id: check-added-large-files
-        args: ['--maxkb=2000']
+      #- id: check-added-large-files
+      #  args: ['--maxkb=2000']
       - id: mixed-line-ending
