Fix up typename errors in pybind_fstext.h (#1)
Working build

--- a/environment.yml
+++ b/environment.yml
@@ -15,6 +15,9 @@ dependencies:
   - pybind11
   - pytest
   - pip
+  - dataclassy
+  - praatio
+  - pytest-order
   - pip:
       - build
       - twine
