Fix bugs related to fMLLR and add better testing suite

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -10,3 +10,10 @@ sphinx:
 
 conda:
   environment: rtd_environment.yml
+
+# This part is necessary otherwise the project is not built
+python:
+   version: 3.9
+   install:
+      - method: pip
+        path: .
