--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,19 +1,28 @@
 version: 2
 
 build:
-  os: "ubuntu-20.04"
+  os: "ubuntu-22.04"
   tools:
     python: "mambaforge-4.10"
+  jobs:
+    post_checkout:
+      - git fetch --unshallow || true
+    pre_install:
+      - git update-index --assume-unchanged .rtd-environment.yml docs/conf.py
 
 sphinx:
-   configuration: docs/source/conf.py
+  builder: html
+  configuration: docs/source/conf.py
+  fail_on_warning: false
+
+formats:
+  - htmlzip
 
 conda:
   environment: rtd_environment.yml
 
 # This part is necessary otherwise the project is not built
 python:
-   version: 3.9
    install:
       - method: pip
         path: .
