--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,58 +43,61 @@ find_package(CUDAToolkit)
 
 find_package(pybind11 REQUIRED)
 include_directories(extensions)
-pybind11_add_module(_kalpy extensions/_kalpy.cpp
-                            extensions/chain/chain.cpp
-                            extensions/cudamatrix/cudamatrix.cpp
-                            extensions/decoder/decoder.cpp
-                            extensions/feat/feat.cpp
-                            extensions/fstext/fstext.cpp
-                            extensions/gmm/gmm.cpp
-                            extensions/hmm/hmm.cpp
-                            extensions/itf/itf.cpp
-                            extensions/ivector/ivector.cpp
-                            extensions/kws/kws.cpp
-                            extensions/lat/lat.cpp
-                            extensions/lm/lm.cpp
-                            #extensions/rnnlm/rnnlm.cpp
-                            extensions/online/online.cpp
-                            extensions/online2/online2.cpp
-                            extensions/matrix/matrix.cpp
-                            extensions/nnet/nnet.cpp
-                            extensions/nnet2/nnet2.cpp
-                            extensions/nnet3/nnet3.cpp
-                            extensions/transform/transform.cpp
-                            extensions/tree/tree.cpp
-                            extensions/util/util.cpp
-                            )
-target_link_libraries(_kalpy PUBLIC kaldi-base kaldi-chain
-                                    kaldi-matrix
-                                    kaldi-cudamatrix
-                                    kaldi-hmm
-                                    kaldi-online kaldi-online2 kaldi-rnnlm
-                                    kaldi-nnet3
-                                    kaldi-nnet2 kaldi-nnet
-                                    kaldi-kws
-                                    kaldi-decoder
-                                    kaldi-lat
-                                    kaldi-ivector kaldi-lm
-                                    kaldi-fstext kaldi-feat
-                                    kaldi-transform kaldi-gmm
-                                    kaldi-tree
-                                    kaldi-util
-                                    fst
-                                    fstscript
-                                    )
+    pybind11_add_module(_kalpy extensions/_kalpy.cpp
+                                extensions/chain/chain.cpp
+                                extensions/cudamatrix/cudamatrix.cpp
+                                extensions/decoder/decoder.cpp
+                                extensions/feat/feat.cpp
+                                extensions/fstext/fstext.cpp
+                                extensions/gmm/gmm.cpp
+                                extensions/hmm/hmm.cpp
+                                extensions/itf/itf.cpp
+                                extensions/ivector/ivector.cpp
+                                extensions/kws/kws.cpp
+                                extensions/lat/lat.cpp
+                                extensions/lm/lm.cpp
+                                #extensions/rnnlm/rnnlm.cpp
+                                extensions/online/online.cpp
+                                extensions/online2/online2.cpp
+                                extensions/matrix/matrix.cpp
+                                extensions/nnet/nnet.cpp
+                                extensions/nnet2/nnet2.cpp
+                                extensions/nnet3/nnet3.cpp
+                                extensions/transform/transform.cpp
+                                extensions/tree/tree.cpp
+                                extensions/util/util.cpp
+                                )
+    target_link_libraries(_kalpy PUBLIC kaldi-base kaldi-chain
+                                        kaldi-matrix
+                                        kaldi-cudamatrix
+                                        kaldi-hmm
+                                        kaldi-online kaldi-online2 kaldi-rnnlm
+                                        kaldi-nnet3
+                                        kaldi-nnet2 kaldi-nnet
+                                        kaldi-kws
+                                        kaldi-decoder
+                                        kaldi-lat
+                                        kaldi-nnet3
+                                        kaldi-nnet2 kaldi-nnet
+                                        kaldi-ivector kaldi-lm
+                                        kaldi-fstext kaldi-feat
+                                        kaldi-transform kaldi-gmm
+                                        kaldi-tree
+                                        kaldi-util
+                                        fst
+                                        fstscript
+                                        )
+if (CUDAToolkit_FOUND)
 
-find_library(KALDI_CUDADECODER kaldi-cudadecoder)
+    find_library(KALDI_CUDADECODER kaldi-cudadecoder)
 
-if(CUDAToolkit_FOUND AND KALDI_CUDADECODER)
+    if(KALDI_CUDADECODER)
 
-   target_link_libraries(_kalpy PUBLIC kaldi-cudadecoder kaldi-cudafeat
-                                    )
+       target_link_libraries(_kalpy PUBLIC kaldi-cudadecoder kaldi-cudafeat
+                                        )
+    endif()
 endif()
-target_compile_definitions(_kalpy
-                           PRIVATE VERSION_INFO="5.5.1068")
+
 if(MSVC)
 set_target_properties(_kalpy PROPERTIES
     DEFINE_SYMBOL "KALDI_DLL_IMPORTS"
