--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,14 +28,10 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Install Conda environment with Micromamba
-        uses: mamba-org/setup-micromamba@v1
+      - name: Set up Python 3.10
+        uses: actions/setup-python@v3
         with:
-          environment-file: environment.yml
-          environment-name: my-env
-          create-args: >-
-            python=3.10
-          cache-environment: true
+          python-version: "3.10"
 
       - name: Install pypa/build
         run: >-
